// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with a user 1`] = `
<div
  className="Select-value"
  title="Administrator"
>
  <div
    className="Select-value-label"
  >
    <Connect(Avatar)
      hash="7daf6c79d4802916d83f6266e24850af"
      name="Administrator"
      size={20}
    />
    <strong
      className="spacer-left"
    >
      Administrator
    </strong>
    <span
      className="note little-spacer-left"
    >
      admin
    </span>
  </div>
</div>
`;

exports[`should render correctly with email instead of hash 1`] = `
<div
  className="Select-value"
  title="Administrator"
>
  <div
    className="Select-value-label"
  >
    <Connect(Avatar)
      email="admin@admin.ch"
      name="Administrator"
      size={20}
    />
    <strong
      className="spacer-left"
    >
      Administrator
    </strong>
    <span
      className="note little-spacer-left"
    >
      admin
    </span>
  </div>
</div>
`;

exports[`should render correctly without value 1`] = `
<div
  className="Select-value"
  title=""
/>
`;
